refactor: update TypeScript configuration and enhance KawarpComponent with improved loading and error handling

--- a/packages/angular/tsconfig.json
+++ b/packages/angular/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "target": "ES2022",
     "module": "ES2022",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
