--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,173 @@
     {
       "mode": "auto"
     }
-  ]
+  ],
+  "files.exclude": {
+    "**/.git": false,
+    "**/.svn": false,
+    "**/.hg": false,
+    "**/.DS_Store": false,
+    "**/Thumbs.db": false,
+    "**/environments": false,
+    "**/.github": false,
+    "**/CVS": false,
+    "**/node_modules": false,
+    "**/.next": false,
+    "**/.husky": false,
+    "**/dist": false,
+    "**/.todo.md": false,
+    "**/.vscode": false,
+    "**/.eslintrc.cjs": false,
+    "**/.editorconfig": false,
+    "**/.gitignore": false,
+    "**/.lintstagedrc.mjs": false,
+    "**/.markdownlint.json": false,
+    "**/.markdownlintignore": false,
+    "**/.prettierignore": false,
+    "**/bun.lockb": false,
+    "**/cspell.json": false,
+    "**/package-lock.json": false,
+    "**/pnpm-lock.yaml": false,
+    "**/next-env.d.ts": false,
+    "**/postcss.config.cjs": false,
+    "**/README.md": false,
+    "**/migrate.ts": false,
+    "**/.env.example": false,
+    "**/__pycache__": false,
+    "**/.pytest_cache": false,
+    "**/venv": false,
+    "**/.sublime-*": false,
+    "**/.angular": false,
+    "**/.npmrc": false,
+    "**/.nvmrc": false,
+    "**/CREDITS": false,
+    "**/LICENSE.md": false,
+    ".git": false,
+    ".github": false,
+    ".svn": false,
+    ".hg": false,
+    "CVS": false,
+    ".DS_Store": false,
+    "Thumbs.db": false,
+    "node_modules": false,
+    ".next": false,
+    ".husky": false,
+    "dist": false,
+    ".todo.md": false,
+    ".vscode": false,
+    ".eslintrc.cjs": false,
+    ".editorconfig": false,
+    ".gitignore": false,
+    ".lintstagedrc.mjs": false,
+    ".markdownlint.json": false,
+    ".markdownlintignore": false,
+    ".prettierignore": false,
+    "bun.lockb": false,
+    "cspell.json": false,
+    "package-lock.json": false,
+    "pnpm-lock.yaml": false,
+    "next-env.d.ts": false,
+    "postcss.config.cjs": false,
+    "README.md": false,
+    "migrate.ts": false,
+    ".env.example": false,
+    "__pycache__": false,
+    ".pytest_cache": false,
+    ".venv": false,
+    ".sublime-*": false,
+    ".angular": false,
+    ".npmrc": false,
+    ".nvmrc": false,
+    "CREDITS": false,
+    "LICENSE.md": false,
+    "**/*.nx": false,
+    "**/*.cursor": false,
+    ".gemini": false,
+    ".taskmaster": false,
+    ".roo": false
+  },
+  "explorerExclude.backup": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/environments": false,
+    "**/.github": true,
+    "**/CVS": true,
+    "**/node_modules": true,
+    "**/.next": true,
+    "**/.husky": true,
+    "**/dist": true,
+    "**/.todo.md": true,
+    "**/.vscode": true,
+    "**/.eslintrc.cjs": true,
+    "**/.editorconfig": true,
+    "**/.gitignore": true,
+    "**/.lintstagedrc.mjs": true,
+    "**/.markdownlint.json": true,
+    "**/.markdownlintignore": true,
+    "**/.prettierignore": true,
+    "**/bun.lockb": true,
+    "**/cspell.json": true,
+    "**/package-lock.json": true,
+    "**/pnpm-lock.yaml": true,
+    "**/next-env.d.ts": true,
+    "**/postcss.config.cjs": true,
+    "**/README.md": true,
+    "**/migrate.ts": true,
+    "**/.env.example": true,
+    "**/__pycache__": true,
+    "**/.pytest_cache": true,
+    "**/venv": true,
+    "**/.sublime-*": true,
+    "**/.angular": true,
+    "**/.npmrc": true,
+    "**/.nvmrc": true,
+    "**/CREDITS": true,
+    "**/LICENSE.md": true,
+    ".git": true,
+    ".github": true,
+    ".svn": true,
+    ".hg": true,
+    "CVS": true,
+    ".DS_Store": true,
+    "Thumbs.db": true,
+    "node_modules": true,
+    ".next": true,
+    ".husky": true,
+    "dist": true,
+    ".todo.md": true,
+    ".vscode": true,
+    ".eslintrc.cjs": true,
+    ".editorconfig": true,
+    ".gitignore": true,
+    ".lintstagedrc.mjs": true,
+    ".markdownlint.json": true,
+    ".markdownlintignore": true,
+    ".prettierignore": true,
+    "bun.lockb": true,
+    "cspell.json": true,
+    "package-lock.json": true,
+    "pnpm-lock.yaml": true,
+    "next-env.d.ts": true,
+    "postcss.config.cjs": true,
+    "README.md": true,
+    "migrate.ts": true,
+    ".env.example": true,
+    "__pycache__": true,
+    ".pytest_cache": true,
+    ".venv": true,
+    ".sublime-*": true,
+    ".angular": true,
+    ".npmrc": true,
+    ".nvmrc": true,
+    "CREDITS": true,
+    "LICENSE.md": true,
+    "**/*.nx": true,
+    "**/*.cursor": true,
+    ".gemini": true,
+    ".taskmaster": true,
+    ".roo": true
+  }
 }
